--- a/DashBoard/templates/includes/_botones.html
+++ b/DashBoard/templates/includes/_botones.html
@@ -6,11 +6,12 @@
 </style>
 
 <div class="botones">
-    <a href="/dashboard/nueva_compra"><button>Nueva posición de cartera</button></a>
+    <a href="/dashboard/nueva_compra"><button class="otros-botones" alt-text="Nueva posición de cartera">Nueva posición de cartera</button></a>
 
-    <a href="/dashboard/eliminar_compras"><button>Eliminar posición de cartera</button></a>
+    <a href="/dashboard/eliminar_compras"><button class="otros-botones">Eliminar posición de cartera</button></a>
 
-    <a href="/dashboard/nuevo_seguimiento"><button>Nuevo valor a seguir</button></a>
+    <a href="/dashboard/nuevo_seguimiento"><button class="otros-botones">Nuevo valor a seguir</button></a>
 
-    <a href="/dashboard/eliminar_seguimientos"><button>Eliminar valor en seguimiento</button></a>
+    <a href="/dashboard/eliminar_seguimientos"><button class="otros-botones">Eliminar valor en seguimiento</button></a>
+    <br>
 </div>
