--- a/DashBoard/templates/includes/_cambio_monedas.html
+++ b/DashBoard/templates/includes/_cambio_monedas.html
@@ -12,8 +12,8 @@
     }
 </style>
 
-<div class="caja" style="width: 20%;">
-    <p class="barra">Cambio monedas</p>
+<div class="caja" style="width: 100%;">
+    <p class="barra">Divisas</p>
     <table>
         <thead>
             <tr>
