--- a/DashBoard/templates/includes/_en_seguimiento.html
+++ b/DashBoard/templates/includes/_en_seguimiento.html
@@ -30,7 +30,7 @@
                     <th>Ticker</th>
                     <th>Fecha inicio seguimiento</th>
                     <th>Precio de entrada deseado</th>
-                    <th>Moneda</th>
+                    <th>Divisa</th>
                     <th>Ult. cierre</th>
                     <th>Valores similares</th>
                 </tr>
@@ -58,6 +58,6 @@
             </tbody>
         </table>
     {% else %}
-        <p>No tienes compras guardadas por ahora.</p>
+        <p>No tienes valores en seguimiento por ahora.</p>
     {% endif %}
 </div>
