--- a/DashBoard/templates/includes/_evol_cartera.html
+++ b/DashBoard/templates/includes/_evol_cartera.html
@@ -51,7 +51,7 @@
                     <th>Fecha compra</th>
                     <th>Num. acciones</th>
                     <th>Precio compra</th>
-                    <th>Moneda</th>
+                    <th>Divisa</th>
                     <th>Ult. cierre</th>
                     <th>Evolución</th>
                 </tr>
