--- a/DashBoard/templates/includes/_histograma_monedas.html
+++ b/DashBoard/templates/includes/_histograma_monedas.html
@@ -25,7 +25,7 @@
 
 <!-- Histograma con Chart.js -->
 <div class="caja">
-    <p class="barra">Distribución por moneda</p>
+    <p class="barra">Distribución por divisa</p>
     <canvas id="histograma"></canvas>
 </div>
 
@@ -57,7 +57,7 @@
             },
             // Para mantener el ratio del aspecto (si no, no 
             // no se ve del todo bien)
-            aspectRatio: 1,
+            aspectRatio: 2,
         }
     });
 </script>
