--- a/Lab/templates/lab.html
+++ b/Lab/templates/lab.html
@@ -19,7 +19,7 @@ que tiene la página de portada 'home' -->
 <div class="container">
   <div class="row">
     <div class="col">
-      <button onclick="mostrarOcultosARIMA()">ARIMA</button>
+      <button class="otros-botones" onclick="mostrarOcultosARIMA()">ARIMA</button>
       <div id="ocultos-arima" class="ocultos-arima">
         <br>
         <div>
@@ -57,7 +57,7 @@ que tiene la página de portada 'home' -->
 
     <!-- Botones para opciones de redes LSTM -->
     <div class="col">
-      <button onclick="mostrarOcultosLSTM()">LSTM</button>
+      <button class="otros-botones" onclick="mostrarOcultosLSTM()">LSTM</button>
       <div id="ocultos-lstm" class="ocultos-lstm">
         <br>
         <div>
