Documentación de Markowitz, frontera eficiente y Sharpe ratio en memoria

--- a/Analysis/templates/chart_y_datos.html
+++ b/Analysis/templates/chart_y_datos.html
@@ -42,6 +42,12 @@ que tiene la página de portada 'home' -->
     </div>
   </div>
 
+  <div class="row">
+    <div class="col">
+      {% include 'includes/_grafica_retornos.html' %}
+    </div>
+  </div>
+  
   <br>
 </div>
 
