--- a/Lab/templates/lab.html
+++ b/Lab/templates/lab.html
@@ -23,6 +23,16 @@ que tiene la página de portada 'home' -->
       <div id="ocultos-arima" class="ocultos-arima">
         <br>
         <div>
+          <a href="/lab/buscar_paramateros_arima">
+            <button class="boton-modelo">Buscar parámetros (p, d, q) con ACF y PACF</button>
+          </a>
+          <div class="ayuda"> 
+            <img class="icono-ayuda" src="{% static 'icons/help.svg' %}" alt="HelpIcon" width="25" height="25">
+            <span class="mensaje-ayuda">Para buscar los parámetros (p, d, q) como si lo hiciéramos en papel, viendo las gráficas de ACF y PACF.</span>
+          </div>
+        </div>
+        <br>
+        <div>
           <a href="/lab/arima_manual">
             <button class="boton-modelo">Parámetros (p, d, q) introducidos por usuario</button>
           </a>
@@ -95,10 +105,10 @@ que tiene la página de portada 'home' -->
   </div>
   <!-- <div class="row">
     <div class="col">
-      <a href="/lab/fbprophet"><button>FBPROPHET</button></a>
+      <a href="/lab/algo_trading"><button>ALGO TRADING</button></a>
     </div>
     <div class="col">
-      <a href="/lab/loquesea"><button>LOQUESEA</button></a>
+      <a href="/lab/fbprophet"><button>FBPROPHET</button></a>
     </div>
   </div> -->
   <br>
