--- a/Lab/templates/buscar_paramateros_arima.html
+++ b/Lab/templates/buscar_paramateros_arima.html
@@ -10,9 +10,9 @@
 <P class="cabecera">ARIMA(p, d, q)</P>
 
 <div class="col-md-6 offset-md-3 mt-5">
-  <div id="arima_auto">
+  <div id="buscar_paramateros_arima">
 
-    <form method="POST" action="{% url 'arima_auto' %}" class="card card-body">
+    <form method="POST" action="{% url 'buscar_paramateros_arima' %}" class="card card-body">
       <p style="color: red;">{{ msg_error }}</p>
 
       {% csrf_token %}
@@ -30,28 +30,31 @@
         <label for="{{ form.num_sesiones.id_for_label }}" class="sr-only"></label>
         {{ form.num_sesiones }}
       </div>
-
-      <div class="form-group">
-        <!-- porcentaje_entrenamiento -->
-        <label for="{{ form.porcentaje_entrenamiento.id_for_label }}" class="sr-only"></label>
-        {{ form.porcentaje_entrenamiento }}
-        <br>
-      </div>
-
-      <!-- Los valores que indican el tipo de pbtención de parámetros
-      (p,d,q) están ocultos en HTML y definidos en los formularios -->
-      <input type="hidden" name="auto" value={{ form.auto.value }}>
-      <input type="hidden" name="manual" value={{ form.manual.value }}>
-      <input type="hidden" name="rejilla" value={{ form.rejilla.value }}>
-      
-      <button type="submit" class="btn btn-dark" style="width: 50%; text-align: center; margin: auto;">Estimar</button><br>
+      <br>
+      <button type="submit" class="btn btn-dark" style="width: 50%; text-align: center; margin: auto;">Mostrar resultados</button><br>
     </form>
     <br>
   </div>
 </div>
 
-{% if forecast_arima_walk_forward and forecast_arima_intervalos_conf %}
-  {% include 'includes/_resumen_y_graficas_arima.html' %}
+{% if graf_1 and graf_2 and graf_3 %}
+    <div class="graph-container">
+        <br>
+        <div class="graph">
+            <p class="barra">Diferenciación logarítmica con d = 1 [diff(1)]</p>
+            <img src="data:image/png;base64,{{ graf_1 }}" alt="diff(1)">
+        </div>
+        <br>
+        <div class="graph">
+            <p class="barra">Diferenciación logarítmica con d = 2 [diff(2)]</p>
+            <img src="data:image/png;base64,{{ graf_2 }}" alt="diff(2)">
+        </div>
+        <br>
+        <div class="graph">
+            <p class="barra">Diferenciación logarítmica con d = 3 [diff(3)]</p>
+            <img src="data:image/png;base64,{{ graf_3 }}" alt="diff(3)">
+        </div>
+    </div>
 {% endif %}
 
 <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
@@ -64,6 +67,22 @@
     overflow-y: auto;
     overflow-x: hidden;
     border: 1px solid #ccc;
+  }
+
+  /* Centrar las gráficas */
+  .graph-container {
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .graph {
+    margin-bottom: 20px;
+  }
+
+  .graph img {
+    width: 100%;
+    height: auto;
   }
 </style>
 <script>
@@ -90,18 +109,6 @@
     });
   });
 
-  // Para el selector predefinido de % de datos de entrenamiento
-  $(function() {
-    var porcentajeEntrenamientoChoices = ['50%', '66%', '70%', '80%', '90%'];
-
-    $("#id_porcentaje_entrenamiento").autocomplete({
-      source: porcentajeEntrenamientoChoices,
-      minLength: 0,
-      delay: 300
-    }).focus(function() {
-      $(this).autocomplete("search", "");
-    });
-  });
 </script>
 
 {% endblock %}
