--- a/Lab/templates/lab.html
+++ b/Lab/templates/lab.html
@@ -64,7 +64,37 @@ que tiene la página de portada 'home' -->
         <br>
       </div>
     </div>
-
+    <div class="col">
+      <button class="otros-botones" onclick="mostrarOcultosAlgoTrading()">Trading algorítmico</button>
+      <div id="ocultos-algo" class="ocultos-algo">
+        <br>
+          <div>
+            <a href="/lab/cruce_medias">
+              <button class="boton-modelo">Algoritmo de cruce de medias</button>
+            </a>
+            <div class="ayuda"> 
+              <img class="icono-ayuda" src="{% static 'icons/help.svg' %}" alt="HelpIcon" width="25" height="25">
+              <span class="mensaje-ayuda">Para calcular cómo se habría comportado un algoritmo de cruce de medias simples y poder deterinar si conviene usarlo como estrategia de inversión</span>
+            </div>
+          </div>
+        <br>
+          <div>
+            <a href="/lab/estrategia_ML">
+              <button class="boton-modelo">Estrategia basada en ML</button>
+            </a>
+            <div class="ayuda"> 
+              <img class="icono-ayuda" src="{% static 'icons/help.svg' %}" alt="HelpIcon" width="25" height="25">
+              <span class="mensaje-ayuda">Para predecir si en la próxima sesión un índice subirá, bajará o no hará movimientos.</span>
+            </div>
+          </div>
+        <br>
+      </div>
+    </div>
+    
+  </div>
+  <br><br><br><br>
+  <!-- ...............................................NUEVA FILA............................................... -->
+  <div class="row">
     <!-- Botones para opciones de redes LSTM -->
     <div class="col">
       <button class="otros-botones" onclick="mostrarOcultosLSTM()">LSTM</button>
@@ -79,82 +109,11 @@ que tiene la página de portada 'home' -->
             <span class="mensaje-ayuda">Para crear, compilar y entrenar una red LSTM que permita estimar el valor de cierre de la próxima sesión. Aquí hay una red con una capa oculta de 5 neuronas y una capa de salida completamente conectada.</span>
           </div>
         </div>
-        <!-- <br>
-        <div>
-          <a href="/lab/lstm">
-            <button class="boton-modelo">LSTM 2</button>
-          </a>
-          <div class="ayuda"> 
-            <img class="icono-ayuda" src="{% static 'icons/help.svg' %}" alt="HelpIcon" width="25" height="25">
-            <span class="mensaje-ayuda">Para hacer algo con LSTM</span>
-          </div>
-        </div>
-        <br>
-        <div>
-          <a href="/lab/lstm">
-            <button class="boton-modelo">LSTM 3</button>
-          </a>
-          <div class="ayuda"> 
-            <img class="icono-ayuda" src="{% static 'icons/help.svg' %}" alt="HelpIcon" width="25" height="25">
-            <span class="mensaje-ayuda">Para hacer algo con LSTM</span>
-          </div>
-        </div>
-        <br> -->
       </div>
     </div>
-  </div>
-  <br><br><br><br>
-  <!-- ...............................................NUEVA FILA............................................... -->
-  <div class="row">
     <div class="col">
-      <button class="otros-botones" onclick="mostrarOcultosAlgoTrading()">Trading algorítmico</button>
-      <div id="ocultos-algo" class="ocultos-algo">
-        <br>
-        <div>
-          <a href="/lab/cruce_medias">
-            <button class="boton-modelo">Algoritmo de cruce de medias</button>
-          </a>
-          <div class="ayuda"> 
-            <img class="icono-ayuda" src="{% static 'icons/help.svg' %}" alt="HelpIcon" width="25" height="25">
-            <span class="mensaje-ayuda">Para calcular cómo se habría comportado un algoritmo de cruce de medias simples y poder deterinar si conviene usarlo como estrategia de inversión</span>
-          </div>
-        </div>
-        <br>
-        <!-- <div>
-          <a href="/lab/arima_manual">
-            <button class="boton-modelo">Parámetros (p, d, q) introducidos por usuario</button>
-          </a>
-          <div class="ayuda"> 
-            <img class="icono-ayuda" src="{% static 'icons/help.svg' %}" alt="HelpIcon" width="25" height="25">
-            <span class="mensaje-ayuda">Para ver una estimación de la próxima sesión. Si conoces los parámetros (p, d, q) que quieres utilizar, porque ajustan un modelo para un stock que conoces bien, este es tu sitio.</span>
-          </div>
-        </div>
-        <br>
-        <div>
-          <a href="/lab/arima_auto">
-            <button class="boton-modelo">Parámetros (p, d, q) estimados automáticamente</button>
-          </a>
-          <div class="ayuda"> 
-            <img class="icono-ayuda" src="{% static 'icons/help.svg' %}" alt="HelpIcon" width="25" height="25">
-            <span class="mensaje-ayuda">Para ver una estimación de la próxima sesión. Los parámetros (p,d,q) se estimarán con 'auto_arima' de 'pmdarima.arima'. Los resultados pueden ser malos, pero es muy rápido. </span>
-          </div>
-        </div>
-        <br>
-        <div>
-          <a href="/lab/arima_rejilla">
-            <button class="boton-modelo">Parámetros (p, d, q) creados con búsqueda por rejilla</button>
-          </a>
-          <div class="ayuda"> 
-            <img class="icono-ayuda" src="{% static 'icons/help.svg' %}" alt="HelpIcon" width="25" height="25">
-            <span class="mensaje-ayuda">Para ver una estimación de la próxima sesión. Tendrás que definir una rejilla de búsqueda para los parámetros (p, d, q) en la siguiente ventana. Este proceso de búsqueda por rejilla es lento, pero puede merecer la pena. Para eso experimentamos ¿verdad?</span>
-          </div>
-        </div> -->
-        <br>
-      </div>
+      <!-- <a href="/lab/fbprophet"><button>FBPROPHET</button></a> -->
     </div>
-    <!-- <div class="col">
-      <a href="/lab/fbprophet"><button>FBPROPHET</button></a>
-    </div> -->
   </div>
   <br>
 </div>
