--- a/Lab/templates/estrategia_basada_en_ML.html
+++ b/Lab/templates/estrategia_basada_en_ML.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'css/estilos_lab.css' %}">
 
 <br>
-<P class="cabecera">ARIMA(p, d, q)</P>
+<P class="cabecera">Estrategia basada en ML</P>
 
 <div class="col-md-6 offset-md-3 mt-5">
   <div id="estrategia_ML">
